重新修改漢堡的位置，把它從 header 移到main_sidebox 裡面，並改成 label

--- a/作業_youtube切版.html
+++ b/作業_youtube切版.html
@@ -14,9 +14,7 @@
         <!-- 左 --------------->
         <div id="header_left">
             <!-- 側欄選單伸縮按鈕 -->
-            <div class="btn">
-                <input type="checkbox" value="">
-            </div>
+            <div class="btn"></div>
             <!-- logo -->
             <div class="ytLogo"></div>
         </div>
@@ -48,6 +46,8 @@
     <section id="main">
         <!-- 左側選單 --------------->
         <div id="main_sidebox">
+            <!-- 漢堡按鈕 -->
+            <label for="check">></label>
             <!-- 首頁 icon -->
             <div class="home_icon"></div>
             <!-- 探索 icon -->
