新增訂閱欄位的圖片

--- a/作業_youtube切版.html
+++ b/作業_youtube切版.html
@@ -42,13 +42,13 @@
             <!-- 訂閱內容 -->
             <li class="forth">
                 <p>訂閱內容</p>
-                <p><img src="./images/toadyNews.png" alt="TODAY 看世界" style="width:240px; height: 40px; margin-left: -16px;"></p>
-                <p><img src="./images/77channel.png" alt="志祺七七" style="width:240px; height: 40px; margin-left: -16px;"></p>
-                <p><img src="./images/許伯簡芝.png" alt="許伯簡芝" style="width:240px; height: 40px; margin-left: -16px;"></p>
-                <p><img src="./images/piano.png" alt="Theishter Piano" style="width:240px; height: 40px; margin-left: -16px;"></p>
-                <p><img src="./images/公視新聞實驗室.png" alt="公視新聞實驗室" style="width:240px; height: 40px; margin-left: -16px;"></p>
-                <p><img src="./images/看電影了沒.png" alt="看電影了沒" style="width:240px; height: 40px; margin-left: -16px;"></p>
-                <p><img src="./images/酷l.png" alt="酷的夢" style="width:240px; height: 40px; margin-left: -16px;"></p>
+                <p><img src="./images/toadyNews.png" alt="TODAY 看世界"></p>
+                <p><img src="./images/77channel.png" alt="志祺七七"></p>
+                <p><img src="./images/許伯簡芝.png" alt="許伯簡芝"></p>
+                <p><img src="./images/piano.png" alt="Theishter Piano"></p>
+                <p><img src="./images/公視新聞實驗室.png" alt="公視新聞實驗室"></p>
+                <p><img src="./images/看電影了沒.png" alt="看電影了沒"></p>
+                <p><img src="./images/酷l.png" alt="酷的夢"></p>
                 <p>顯示另外 84 個項目</p>
             </li><hr>
             <!-- 更多功能 -->
