slidebar 可以縮進去了
把 input checkbox 移到它的作用層 (sidebar) 外 (因為checkbox會作用在它的下層)

--- a/作業_youtube切版.html
+++ b/作業_youtube切版.html
@@ -11,15 +11,14 @@
 </head>
 
 <body>
-    <!-- 漢堡選單區 ------------------->
-    
+    <!-- 漢堡選單區 ------------------->    
+    <input type="checkbox" id="toogle" style="display: none;">
     <div class="sidebar">    
         <ul>
             <!-- logo 和按鈕區 -->
             <li class="hamburger">
                 <div class="btn">
-                    <input type="checkbox" id="check" style="display: none;">
-                    <label for="check"><i class="fas fa-bars"></i></label>
+                    <label for="toogle"><i class="fas fa-bars exit"></i></label>
                 </div>
                 <div class="logo">
                     <img src="./images/youtube_logo.png" alt="yt_logo" style="height: 33px; width: auto;">
@@ -48,13 +47,13 @@
             <li class="list">
                 <ul style="position: relative;">
                     <p>&emsp;訂閱內容</p>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UCmMnzrvnsSnv-0u9M1Rxiqw"><img src="https://yt3.ggpht.com/ytc/AAUvwniSnrTpU6FDgBwrZ2EBSS4lskgf6KUhxdQNVXkN=s88-c-k-c0x00ffffff-no-rj" alt="TODAY 看世界" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 49px;">&emsp;TODAY 看世界</a></li>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UCiWXd0nmBjlKROwzMyPV-Nw"><img src="https://yt3.ggpht.com/ytc/AAUvwnjTuMUGrd5ilsoavl8lqLHwv5cO_cv-2H1tEcsG=s88-c-k-c0x00ffffff-no-rj" alt="志祺七七 " style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 90px;">&emsp;志祺七七 X 圖文不符</a></li>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UClEzBxwGGFrbwTVeawscqjQ"><img src="https://yt3.ggpht.com/ytc/AAUvwniCo8j1DlLzkPDvir_E71d8TSl-lIyKRnrBxsn0XQ=s88-c-k-c0x00ffffff-no-rj" alt="許伯簡芝" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 133px;">&emsp;許伯&簡芝—倉鼠人</a></li>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UCBShw5O9wwBt9G59xuESZYg"><img src="https://yt3.ggpht.com/ytc/AAUvwniYHJtuXKV1N43LsCNQC7w9irQi3H3_RD4kjggy4w=s88-c-k-c0x00ffffff-no-rj" alt="Theishter Piano" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 174px;">&emsp;Theishter - Anime on...</a></li>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UCMDcOT4z7GS1SRGG2g7z43g"><img src="https://yt3.ggpht.com/ytc/AAUvwnjc0yaTFGB60DDTAhKhkWorghrqSgQahCFKl4_htQ=s88-c-k-c0x00ffffff-no-rj" alt="公視新聞實驗室" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 215px;">&emsp;公視P#新聞實驗室</a></li>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UCZmyD8-UsaxaVL-Zx3KEQKw"><img src="https://yt3.ggpht.com/ytc/AAUvwnhj9BZK1bRUWMiQ4FO8lyAWD4ichQgEAI8rLbMn=s88-c-k-c0x00ffffff-no-rj" alt="看電影了沒" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 257px;">&emsp;看电影了没</a></li>
-                    <li>&emsp;<a href="https://www.youtube.com/channel/UCV1OpUwWJCMiv6gJCRR6yAg"><img src="https://yt3.ggpht.com/ytc/AAUvwnjgb0xtMOj6ol8mAzG6NO4_hP4q2cVL1taBSBwf4w=s88-c-k-c0x00ffffff-no-rj" alt="酷的夢" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 298px;">&emsp;Ku's dream酷的夢-</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UCmMnzrvnsSnv-0u9M1Rxiqw"><img src="https://yt3.ggpht.com/ytc/AAUvwniSnrTpU6FDgBwrZ2EBSS4lskgf6KUhxdQNVXkN=s88-c-k-c0x00ffffff-no-rj" alt="TODAY 看世界" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 49px;">&emsp;&emsp;&emsp;TODAY 看世界</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UCiWXd0nmBjlKROwzMyPV-Nw"><img src="https://yt3.ggpht.com/ytc/AAUvwnjTuMUGrd5ilsoavl8lqLHwv5cO_cv-2H1tEcsG=s88-c-k-c0x00ffffff-no-rj" alt="志祺七七 " style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 90px;">&emsp;;&emsp;&emsp;志祺七七 X 圖文不符</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UClEzBxwGGFrbwTVeawscqjQ"><img src="https://yt3.ggpht.com/ytc/AAUvwniCo8j1DlLzkPDvir_E71d8TSl-lIyKRnrBxsn0XQ=s88-c-k-c0x00ffffff-no-rj" alt="許伯簡芝" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 133px;">&emsp;;&emsp;&emsp;許伯&簡芝—倉鼠人</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UCBShw5O9wwBt9G59xuESZYg"><img src="https://yt3.ggpht.com/ytc/AAUvwniYHJtuXKV1N43LsCNQC7w9irQi3H3_RD4kjggy4w=s88-c-k-c0x00ffffff-no-rj" alt="Theishter Piano" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 174px;">&emsp;;&emsp;&emsp;Theishter - Anime on...</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UCMDcOT4z7GS1SRGG2g7z43g"><img src="https://yt3.ggpht.com/ytc/AAUvwnjc0yaTFGB60DDTAhKhkWorghrqSgQahCFKl4_htQ=s88-c-k-c0x00ffffff-no-rj" alt="公視新聞實驗室" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 215px;">&emsp;;&emsp;&emsp;公視P#新聞實驗室</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UCZmyD8-UsaxaVL-Zx3KEQKw"><img src="https://yt3.ggpht.com/ytc/AAUvwnhj9BZK1bRUWMiQ4FO8lyAWD4ichQgEAI8rLbMn=s88-c-k-c0x00ffffff-no-rj" alt="看電影了沒" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 257px;">&emsp;;&emsp;&emsp;看电影了没</a></li>
+                    <li>&emsp;<a href="https://www.youtube.com/channel/UCV1OpUwWJCMiv6gJCRR6yAg"><img src="https://yt3.ggpht.com/ytc/AAUvwnjgb0xtMOj6ol8mAzG6NO4_hP4q2cVL1taBSBwf4w=s88-c-k-c0x00ffffff-no-rj" alt="酷的夢" style="height: 24px; width: auto; border-radius: 50%; position: absolute; top: 298px;">&emsp;;&emsp;&emsp;Ku's dream酷的夢-</a></li>
                     <li>&emsp;<a href="">&emsp;<i class="fas fa-chevron-down"></i>&emsp;顯示另外 84 個項目</a></li>
                 </ul>
             </li><hr>
@@ -105,8 +104,7 @@
         <div id="header_left">
             <!-- 側欄選單伸縮按鈕 -->
             <div class="btn">
-                <input type="checkbox" id="check" style="display: none;">
-                <label for="check"><i class="fas fa-bars"></i></label>
+                <label for="toogle"><i class="fas fa-bars exit"></i></label>
             </div>
             <!-- logo -->
             <div class="logo"></div>
