側邊欄位完成

--- a/作業_youtube切版.html
+++ b/作業_youtube切版.html
@@ -156,19 +156,19 @@
                 <!-- 首頁 icon -->
                 <ul>
                     <li class="main_icon">
-                        <a href="" alt="首頁"><i class="fas fa-home" style="color: rgb(255 0 0);"></i><br>首頁</a>
+                        <a href="" alt="首頁"><i class="fas fa-home" style="color: rgb(255 0 0); margin-bottom: 6px;"></i><br><span style="font-size: 14px;">首頁</span></a>
                     </li>
                     <!-- 探索 icon -->
                     <li class="main_icon">
-                        <a href="" alt="探索"><i class="fas fa-compass"></i><br>探索</a>
+                        <a href="" alt="探索"><i class="fas fa-compass" style="margin-bottom: 6px;"></i><br><span style="font-size: 14px;">探索</span></a>
                     </li>
                     <!-- 訂閱內容 icon -->
                     <li class="main_icon">
-                        <a href="" alt="訂閱"><i class="fas fa-box-open"></i><br>訂閱內容</a>
+                        <a href="" alt="訂閱"><i class="fas fa-box-open" style="margin-bottom: 6px;"></i><br><span style="font-size: 14px;">訂閱內容</span></a>
                     </li>
                     <!-- 媒體庫 icon -->
                     <li class="main_icon">
-                        <a href="" alt="媒體庫"><i class="fas fa-play-circle"></i><br>媒體庫</a>
+                        <a href="" alt="媒體庫"><i class="fas fa-play-circle" style="margin-bottom: 6px;"></i><br><span style="font-size: 14px;">媒體庫</span></a>
                     </li>
                 </ul>
             </div>
